Fix button overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,6 @@
   border-color: white;
 }
 
-#quote-text {
-  height: 120px;
-}
 
 footer {
   text-align: right;
